--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1612,7 +1612,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1630,7 +1630,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1648,7 +1648,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sản xuất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1666,7 +1666,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vũ khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1684,7 +1684,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phòng cụ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1702,7 +1702,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang sức",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1720,7 +1720,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1738,7 +1738,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thú cưỡi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1756,7 +1756,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cánh",
         "ar":"",
         "it":"",
         "pl":"",
