--- a/Translation/general.json
+++ b/Translation/general.json
@@ -393,7 +393,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Santai"
     },
     "general.pvpmode.pk":{
         "en":"PK",
@@ -411,6 +411,6 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"PK"
     }
 }
