--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -33,7 +33,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":"Class yang dibutuhkah"
+        "id":"Job yang dibutuhkah"
     },
     "tooltip.item.gender":{
         "en":"Required Gender",
