--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -244,7 +244,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Công",
+        "vi":"Tấn Công",
         "ar":"",
         "it":"",
         "pl":"",
@@ -262,7 +262,7 @@
         "de":"ANG",
         "jp":"",
         "pt":"",
-        "vi":"ATK",
+        "vi":"Công",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"VER",
         "jp":"",
         "pt":"",
-        "vi":"Thủ",
+        "vi":"Phòng thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -298,7 +298,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"DEF",
+        "vi":"Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"ENHC DMG",
+        "vi":"Tăng sát thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -370,7 +370,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"DMG RD",
+        "vi":"Giảm sát thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tốc độ đánh ",
+        "vi":"Tốc độ đánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -406,7 +406,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"ATK SPD",
+        "vi":"Tốc độ đánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -424,7 +424,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điểm kỹ năng",
+        "vi":"Tăng sát thương kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -442,7 +442,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Skill ENHC",
+        "vi":"Tăng kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -478,7 +478,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"ACC",
+        "vi":"Chính xác",
         "ar":"",
         "it":"",
         "pl":"",
@@ -496,7 +496,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kỹ chuẩn",
+        "vi":"Chính xác của kĩ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -514,7 +514,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Skill ACC",
+        "vi":"Kỹ chuẩn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -550,7 +550,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"EVA",
+        "vi":"Né Tránh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kỹ né",
+        "vi":"Né tránh kĩ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -586,7 +586,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỹ né",
         "ar":"",
         "it":"",
         "pl":"",
@@ -604,7 +604,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bạo chuẩn",
+        "vi":"Độ chính xác bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -622,7 +622,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"CRIT ACC",
+        "vi":"Bạo chuẩn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -640,7 +640,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kỹ bạo",
+        "vi":"Độ chính xác bạo kích kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Skill CRIT ACC",
+        "vi":"Kỹ bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tránh bạo",
+        "vi":"Tránh né bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -694,7 +694,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"CRIT EVA",
+        "vi":"Né bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -712,7 +712,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tránh kỹ bạo",
+        "vi":"Tránh né kỹ năng bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -730,7 +730,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Skill CRIT EVA",
+        "vi":"Né kỹ bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -766,7 +766,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"CRIT ENCH",
+        "vi":"Tăng bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -784,7 +784,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tăng kỹ bạo",
+        "vi":"Tăng bạo kích kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -802,7 +802,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Skill CRIT ENCH",
+        "vi":"Tăng kỹ bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -838,7 +838,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"CRIT RD",
+        "vi":"Giảm bạo kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -856,7 +856,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giảm kỹ bạo",
+        "vi":"Giảm bạo kích kỹ năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -874,7 +874,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Skill CRIT RD",
+        "vi":"Giảm kỹ bạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -892,7 +892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thần Công",
+        "vi":"Tấn công thần thánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -928,7 +928,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"May mắn",
+        "vi":"Đây là điểm may mắn của bạn <3",
         "ar":"",
         "it":"",
         "pl":"",
