--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1648,7 +1648,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Sản xuất",
+        "vi":"Chế tạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1774,7 +1774,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chế tạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1792,7 +1792,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chế tạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1810,7 +1810,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nguyên liệu cần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1828,7 +1828,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vàng cần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1846,7 +1846,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"EXP chế tạo",
         "ar":"",
         "it":"",
         "pl":"",
