--- a/Translation/general.json
+++ b/Translation/general.json
@@ -208,7 +208,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chiến sĩ",
+        "vi":"Chiến Sĩ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -316,7 +316,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"lv",
+        "vi":"Lv",
         "ar":"",
         "it":"",
         "pl":"",
