--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1792,7 +1792,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chế tạo",
+        "vi":"Nâng cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1864,7 +1864,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bắt đầu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1882,7 +1882,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dừng",
         "ar":"",
         "it":"",
         "pl":"",
