--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1888,5 +1888,59 @@
         "pl":"",
         "th":"",
         "id":"Stop"
+    },
+    "UI.windows.confirm.title":{
+        "en":"Confirm box",
+        "fr":"Confirmation",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.confirm":{
+        "en":"Confirm",
+        "fr":"Confirmer",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.confirm.close":{
+        "en":"Close",
+        "fr":"Fermer",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
