--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1900,7 +1900,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xác nhận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1918,7 +1918,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xác nhận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1936,7 +1936,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đóng",
         "ar":"",
         "it":"",
         "pl":"",
