--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -5,7 +5,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Слот Экипировки",
         "tr":"",
         "de":"",
         "jp":"",
@@ -23,7 +23,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемый Класс",
         "tr":"",
         "de":"",
         "jp":"",
@@ -41,7 +41,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемый Пол",
         "tr":"",
         "de":"",
         "jp":"",
@@ -59,7 +59,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемый уровень",
         "tr":"",
         "de":"",
         "jp":"",
