--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5,7 +5,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Шлем",
         "tr":"",
         "de":"",
         "jp":"",
@@ -23,7 +23,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Броня",
         "tr":"",
         "de":"",
         "jp":"",
@@ -41,7 +41,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Руки",
         "tr":"",
         "de":"",
         "jp":"",
@@ -59,7 +59,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Оружие",
         "tr":"",
         "de":"",
         "jp":"",
@@ -77,7 +77,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ноги",
         "tr":"",
         "de":"",
         "jp":"",
@@ -95,7 +95,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Шея",
         "tr":"",
         "de":"",
         "jp":"",
@@ -113,7 +113,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Кольцо",
         "tr":"",
         "de":"",
         "jp":"",
@@ -131,7 +131,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Пояс",
         "tr":"",
         "de":"",
         "jp":"",
@@ -149,7 +149,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Плащ",
         "tr":"",
         "de":"",
         "jp":"",
@@ -167,7 +167,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ездовой",
         "tr":"",
         "de":"",
         "jp":"",
@@ -185,7 +185,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Дух",
         "tr":"",
         "de":"",
         "jp":"",
@@ -203,7 +203,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Книга",
         "tr":"",
         "de":"",
         "jp":"",
@@ -221,7 +221,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Книга Духов",
         "tr":"",
         "de":"",
         "jp":"",
@@ -239,7 +239,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Зелье",
         "tr":"",
         "de":"",
         "jp":"",
@@ -257,7 +257,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Эссенция",
         "tr":"",
         "de":"",
         "jp":"",
@@ -275,7 +275,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Крылья",
         "tr":"",
         "de":"",
         "jp":"",
@@ -293,7 +293,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Прическа",
         "tr":"",
         "de":"",
         "jp":"",
@@ -311,7 +311,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест",
         "tr":"",
         "de":"",
         "jp":"",
@@ -329,7 +329,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Разное",
         "tr":"",
         "de":"",
         "jp":"",
