--- a/Translation/general.json
+++ b/Translation/general.json
@@ -59,7 +59,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Жетон",
         "tr":"",
         "de":"",
         "jp":"",
@@ -77,7 +77,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Жетоны",
         "tr":"",
         "de":"",
         "jp":"",
@@ -113,7 +113,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Купоны",
         "tr":"",
         "de":"",
         "jp":"",
@@ -203,7 +203,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Воин",
         "tr":"",
         "de":"",
         "jp":"",
@@ -221,7 +221,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Лучник",
         "tr":"",
         "de":"",
         "jp":"",
@@ -239,7 +239,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Маг",
         "tr":"",
         "de":"",
         "jp":"",
@@ -257,7 +257,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"М",
         "tr":"",
         "de":"",
         "jp":"",
@@ -275,7 +275,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ж",
         "tr":"",
         "de":"",
         "jp":"",
@@ -293,7 +293,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Уровень",
         "tr":"",
         "de":"",
         "jp":"",
@@ -311,7 +311,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ур.",
         "tr":"",
         "de":"",
         "jp":"",
@@ -329,7 +329,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Привязывается при экипировке",
         "tr":"",
         "de":"",
         "jp":"",
@@ -347,7 +347,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Привязывается при поднятии",
         "tr":"",
         "de":"",
         "jp":"",
@@ -365,7 +365,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Привязан",
         "tr":"",
         "de":"",
         "jp":"",
@@ -383,7 +383,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Мирный",
         "tr":"",
         "de":"",
         "jp":"",
@@ -401,7 +401,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"ПВП",
         "tr":"",
         "de":"",
         "jp":"",
@@ -419,7 +419,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Продать {0}",
         "tr":"",
         "de":"",
         "jp":"",
@@ -437,7 +437,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Поддтверждаете продажу {0} за {1} золота?",
         "tr":"",
         "de":"",
         "jp":"",
