--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -959,7 +959,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест",
         "tr":"",
         "de":"Quests",
         "jp":"",
@@ -977,7 +977,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Увеличение",
         "tr":"",
         "de":"Wachstum",
         "jp":"",
@@ -995,7 +995,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Доступно",
         "tr":"",
         "de":"Verfügbar",
         "jp":"",
@@ -1013,7 +1013,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Задача Квеста",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1031,7 +1031,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Награда за задание",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1049,7 +1049,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Поисание Квеста",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1067,7 +1067,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Выполнено",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1085,7 +1085,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Главный Квест",
         "tr":"",
         "de":"Hauptquest",
         "jp":"",
@@ -1103,7 +1103,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Второстепенный Квест",
         "tr":"",
         "de":"Zweitquests",
         "jp":"",
@@ -1121,7 +1121,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест Способности",
         "tr":"",
         "de":"Talentquest",
         "jp":"",
@@ -1139,7 +1139,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ежедневный Квест",
         "tr":"",
         "de":"Tägliches Quest",
         "jp":"",
@@ -1157,7 +1157,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест Гильдии",
         "tr":"",
         "de":"Gildenquest",
         "jp":"",
@@ -1175,7 +1175,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Персонаж",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1193,7 +1193,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Экипировка",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1211,7 +1211,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Благословение",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1229,7 +1229,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Доблесть",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1247,7 +1247,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Элемент",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1265,7 +1265,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Инвентарь",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1283,7 +1283,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Все",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1301,7 +1301,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Экипировка",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1319,7 +1319,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Зелья",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1337,7 +1337,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Материалы",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1355,7 +1355,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Дух",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1373,7 +1373,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1391,7 +1391,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Разное",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1409,7 +1409,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Вместимость Инвентаря",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1427,7 +1427,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Сортировать",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1445,7 +1445,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Разделить",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1463,7 +1463,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Укрепление",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1481,7 +1481,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Оптовая Продажа",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1499,7 +1499,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Продажа",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1517,7 +1517,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Донат",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1535,7 +1535,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"[Заперто]",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1553,7 +1553,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Руководство",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1571,7 +1571,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Золото",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1589,7 +1589,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Предмет",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1607,7 +1607,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Линия",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1624,7 +1624,7 @@
         "fr":"Ln",
         "es":"",
         "ch":"",
-        "kr":"",
+        "kr":"Лн",
         "ru":"",
         "tr":"",
         "de":"",
@@ -1643,7 +1643,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ремесло",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1661,7 +1661,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Оружие",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1679,7 +1679,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Броня",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1697,7 +1697,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Бижутерия",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1715,7 +1715,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Зелья",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1733,7 +1733,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ездовой",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1751,7 +1751,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Крылья",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1769,7 +1769,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Изготовление",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1787,7 +1787,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Модификачия",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1805,7 +1805,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемые материалы",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1823,7 +1823,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемое Золото",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1841,7 +1841,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Уровень Ремесла",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1859,7 +1859,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Старт",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1877,7 +1877,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Стоп",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1895,7 +1895,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Подтверждение",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1913,7 +1913,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Подтвердить",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1931,7 +1931,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Закрыть",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1949,7 +1949,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ярмарка",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1967,7 +1967,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Магазин",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1985,7 +1985,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Отправить",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2003,7 +2003,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Аукцион",
         "tr":"",
         "de":"",
         "jp":"",
