--- a/Translation/general.json
+++ b/Translation/general.json
@@ -448,5 +448,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+	"general.buy":{
+        "en":"Buy",
+        "fr":"Acheter",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
