--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1954,7 +1954,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chợ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1972,7 +1972,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1990,7 +1990,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Gửi bán",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2008,7 +2008,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đấu giá",
         "ar":"",
         "it":"",
         "pl":"",
