--- a/Translation/general.json
+++ b/Translation/general.json
@@ -424,7 +424,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bán {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -442,7 +442,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn có muốn bán {0} để nhận {1} vàng?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -460,7 +460,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mua",
         "ar":"",
         "it":"",
         "pl":"",
