--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -17,49 +17,49 @@
 	"UI.chat.channel.local":{
 		"en": "Local",
 		"fr": "Local",
-		"es": "",
+		"es": "Local",
 		"ch": "",
 		"kr": "",
 	},
 	"UI.chat.channel.world":{
 		"en": "World",
 		"fr": "Monde",
-		"es": "",
+		"es": "Mundo",
 		"ch": "",
 		"kr": "",
 	},
 	"UI.chat.channel.notice":{
 		"en": "Notice",
 		"fr": "Annonce",
-		"es": "",
+		"es": "Anuncio",
 		"ch": "",
 		"kr": "",
 	},
 	"UI.chat.channel.whisper":{
 		"en": "PM",
 		"fr": "MP",
-		"es": "",
+		"es": "MP",
 		"ch": "",
 		"kr": "",
 	},
 	"UI.chat.channel.guild":{
 		"en": "Guild",
 		"fr": "Guilde",
-		"es": "",
+		"es": "Gremio",
 		"ch": "",
 		"kr": "",
 	},
 	"UI.chat.channel.group":{
 		"en": "Group",
 		"fr": "Groupe",
-		"es": "",
+		"es": "Grupo",
 		"ch": "",
 		"kr": "",
 	},
 	"UI.chat.channel.system":{
 		"en": "System",
 		"fr": "Système",
-		"es": "",
+		"es": "Sistema",
 		"ch": "",
 		"kr": "",
 	},
@@ -74,21 +74,21 @@
 	"UI.stat.MP": {
 		"en": "MP",
 		"fr": "PM",
-		"es": "  ",
+		"es": "MP",
 		"ch": "魔法值",
 		"kr": "  ",
 	},
 	"UI.stat.EXP": {
 		"en": "EXP",
 		"fr": "EXP",
-		"es": "  ",
+		"es": "EXP",
 		"ch": "经验值",
 		"kr": "  ",
 	},
 	"UI.stat.SPD": {
 		"en": "SPD",
 		"fr": "VIT",
-		"es": "",
+		"es": "SPD",
 		"ch": "",
 		"kr": "",
 	},
@@ -214,7 +214,7 @@
 	"UI.stat.EVA.short": {
 		"en": "EVA",
 		"fr": "ESQ",
-		"es": "  ",
+		"es": "EVA",
 		"ch": "闪避",
 		"kr": "  ",
 	},
@@ -368,7 +368,7 @@
 	"UI.stat.LUCK.short": {
 		"en": "Luck",
 		"fr": " ",
-		"es": "  ",
+		"es": "Suerte",
 		"ch": "幸运值",
 		"kr": "  ",
 	}
